--- a/.github/workflows/updata.yml
+++ b/.github/workflows/updata.yml
@@ -29,7 +29,7 @@ jobs:
     
     - name: Updata
       run: |
-        python ./Script/Data/update.py
+        python ./Script/Data/updatalistyear.py
         
         
     - name: Push
